# efp-lang

./: CMakeLists.txt  CMakePresets.json  example.efp
include/: parser.h
src/: main.cpp  parser.cpp
